--- a/WindowsFormsAppTest/WindowsFormsAppTest.csproj
+++ b/WindowsFormsAppTest/WindowsFormsAppTest.csproj
@@ -25,4 +25,11 @@
     <Folder Include="controller\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+    <PackageReference Include="MySql.Data" Version="8.0.33" />
+  </ItemGroup>
+
 </Project>
